Criação da seção tipos

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             <nav class="navbar-collapse collapse justify-content-end mt-sm-2 mt-md-4 mt-lg-0 mt-4" id="menu-principal">
                 <ul class="nav nav-pills d-block d-md-flex">
                     <li class="nav-item fw-bold">
-                        <a href="#sobre-o-studio" class="nav-link active">
+                        <a href="#sobre-o-studio" class="nav-link">
                             <i class="bi bi-house me-1"></i>
                             Sobre
                         </a>
                     </li>
                     <li class="nav-item fw-bold">
-                        <a href="#tipo" class="nav-link">
+                        <a href="#tipos" class="nav-link">
                             <i class="bi bi-camera me-1"></i>
                             Tipos de fotografia
                         </a>
@@ -55,7 +55,7 @@
             </nav>
         </div>
     </header>
-    <div id="cabecalho" data-bs-spy="scrool" data-bs-smooth-scroll="true">
+    <div data-bs-target="#cabecalho" data-bs-spy="scrool" data-bs-smooth-scroll="true">
         <section id="sobre-o-studio">
 
             <!--Carousel-->
@@ -109,18 +109,75 @@
                             <img src="imgs/sobre/camera.jpg" class="d-bock w-100 rounded" alt="">
                         </div>
                         <div class="col-md-7 mt-3 mt-md-0">
-                            <h2 class="titulo-destaque">Sobre <span class="titulo-setaque-colorido">o studio</span></h2>
+                            <h2 class="titulo-destaque">Sobre <span class="titulo-destaque-colorido">o studio</span></h2>
                             <p>O Studio Câmera é um estúdio de fotografia localizado na cidade de São Paulo, 
                                 com uma excelente reputação no mercado. Fundado em 2000, o estúdio é especializado 
                                 em fotografia de casamento, família, em PB (Preto & Branco), de pet e retratos.
                             </p>
-                            <h3 class="titulo-destaque">Sobre <span class="titulo-setaque-colorido">a equipe</span></h3>
+                            <h3 class="titulo-destaque">Sobre <span class="titulo-destaque-colorido">a equipe</span></h3>
                             <p>O Studio Câmera conta com uma equipe de profissionais experientes e qualificados, 
                                 que utilizam equipamentos de última geração para produzir imagens de alta qualidade, 
                                 o estúdio oferece uma variedade de serviços. Localizado em uma área central de São Paulo, 
                                 com fácil acesso. O estúdio possui um ambiente aconchegante e profissional, que proporciona 
                                 aos clientes uma experiência agradável e inesquecível.
                             </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="tipos" class="pt-5 pb-5">
+            <div class="container">
+                <div class="row">
+                    <h2 class="titulo-destaque text-center titulo-destaque-dark">Tipos <span class="titulo-destaque-colorido-dark">de fotografia</span></h2>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-lg-3 col-md-6 col-sm-12 mb-md-2">
+                        <div class="card">
+                            <img src="imgs/tipos/casamento.jpg" alt="" class="d-block w-100 rounded">
+                            <div class="card-body">
+                                <h4 class="card-title text-center titulo-destaque titulo-destaque-colorido-dark"><i class="bi bi-heart-fill me-1"></i> Casamento</h4>
+                                <p class="text-center">A fotografia de casamento é uma especialidade da 
+                                    fotografia que se concentra em registrar o dia do 
+                                    casamento de um casal.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12 mb-md-2">
+                        <div class="card">
+                            <img src="imgs/tipos/pet.jpg" alt="" class="d-block w-100 rounded">
+                            <div class="card-body">
+                                <h4 class="card-title text-center titulo-destaque titulo-destaque-colorido-dark"><i class="bi bi-emoji-heart-eyes-fill me-2"></i>Pet</h4>
+                                <p class="text-center">A fotografia de pet é uma área encantadora da que 
+                                    captura a personalidade única e a beleza 
+                                    dos nossos amigos peludos.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12 mb-md-2">
+                        <div class="card">
+                            <img src="imgs/tipos/familia.jpg" alt="" class="d-block w-100 rounded">
+                            <div class="card-body">
+                                <h4 class="card-title text-center titulo-destaque titulo-destaque-colorido-dark"><i class="bi bi-people-fill me-1"></i> Família</h4>
+                                <p class="text-center">Fotografia de família é uma forma linda de capturar 
+                                    o amor, a conexão e a alegria que existem entre os membros de uma 
+                                    família. 
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12 mb-md-2">
+                        <div class="card">
+                            <img src="imgs/tipos/preto-branco.jpg" alt="" class="d-block w-100 rounded">
+                            <div class="card-body">
+                                <h4 class="card-title text-center titulo-destaque titulo-destaque-colorido-dark">
+                                    <i class="bi bi-circle-half me-2"></i>Preto & Branco</h4>
+                                <p class="text-center">A fotografia em preto e branco é uma forma de arte 
+                                    que usa apenas preto, branco e tons de cinza para criar imagens. 
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
