Finalização da seção contato

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Studio Câmera</title>
+    <link rel="shortcut icon" type="image/png" href="./imgs/icone.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
@@ -46,7 +47,7 @@
                         </a>
                     </li>
                     <li class="nav-item fw-bold">
-                        <a href="#contato" class="nav-link">
+                        <a href="#entre-em-contato" class="nav-link">
                             <i class="bi bi-megaphone me-1"></i>
                             Entre em contato
                         </a>
@@ -134,7 +135,7 @@
             <div class="container">
                 <div class="row">
                     <h2 class="titulo-destaque text-center titulo-destaque-dark">Tipos<span
-                            class="titulo-destaque-colorido-dark">de fotografia</span></h2>
+                            class="titulo-destaque-colorido-dark"> de fotografia</span></h2>
                 </div>
                 <div class="row mt-3">
                     <div class="col-lg-3 col-md-6 col-sm-12 mb-md-4 mb-sm-3">
@@ -271,8 +272,8 @@
 
                                     <div class="col-sm-12 col-md-6 col-lg-3 mb-md-3 mb-sm-3">
                                         <div class="card" data-toggle="modal" data-target="#pet1">
-                                            <img class="d-block w-100 rounded"
-                                                src="imgs/ensaios/pet/pet-1.jpg" alt="Gog Floquinho">
+                                            <img class="d-block w-100 rounded" src="imgs/ensaios/pet/pet-1.jpg"
+                                                alt="Gog Floquinho">
                                             <div class="card-body">
                                                 <div class="card-title text-center">
                                                     <h5 class="titulo-destaque fw-bold mt-2">Dog Floquinho</h5>
@@ -283,8 +284,8 @@
 
                                     <div class="col-sm-12 col-md-6 col-lg-3 mb-md-3 mb-sm-3">
                                         <div class="card" data-toggle="modal" data-target="#pet2">
-                                            <img class="d-block w-100 rounded"
-                                                src="imgs/ensaios/pet/pet-2.jpg" alt="Dog Lili #1">
+                                            <img class="d-block w-100 rounded" src="imgs/ensaios/pet/pet-2.jpg"
+                                                alt="Dog Lili #1">
                                             <div class="card-body">
                                                 <div class="card-title text-center">
                                                     <h5 class="titulo-destaque fw-bold mt-2">Dog Lili #1</h5>
@@ -295,8 +296,8 @@
 
                                     <div class="col-sm-12 col-md-6 col-lg-3 mb-md-3 mb-sm-3">
                                         <div class="card" data-toggle="modal" data-target="#pet3">
-                                            <img class="d-block w-100 rounded"
-                                                src="imgs/ensaios/pet/pet-3.jpg" alt="Dog Lili #2">
+                                            <img class="d-block w-100 rounded" src="imgs/ensaios/pet/pet-3.jpg"
+                                                alt="Dog Lili #2">
                                             <div class="card-body">
                                                 <div class="card-title text-center">
                                                     <h5 class="titulo-destaque fw-bold mt-2">Dog Lili #2</h5>
@@ -307,8 +308,8 @@
 
                                     <div class="col-sm-12 col-md-6 col-lg-3 mb-md-3">
                                         <div class="card" data-toggle="modal" data-target="#pet4">
-                                            <img class="d-block w-100 rounded"
-                                                src="imgs/ensaios/pet/pet-4.jpg" alt="Dog Lili #3">
+                                            <img class="d-block w-100 rounded" src="imgs/ensaios/pet/pet-4.jpg"
+                                                alt="Dog Lili #3">
                                             <div class="card-body">
                                                 <div class="card-title text-center">
                                                     <h5 class="titulo-destaque fw-bold mt-2">Dog Lili #3</h5>
@@ -319,8 +320,8 @@
 
                                     <div class="col-sm-12 col-md-6 col-lg-3 mb-md-3">
                                         <div class="card" data-toggle="modal" data-target="#pet4">
-                                            <img class="d-block w-100 rounded"
-                                                src="imgs/ensaios/pet/pet-5.jpg" alt="Dog Caramelo">
+                                            <img class="d-block w-100 rounded" src="imgs/ensaios/pet/pet-5.jpg"
+                                                alt="Dog Caramelo">
                                             <div class="card-body">
                                                 <div class="card-title text-center">
                                                     <h5 class="titulo-destaque fw-bold mt-2">Dog Caramelo</h5>
@@ -336,8 +337,8 @@
 
                                     <div class="col-sm-12 col-md-6 col-lg-3 mb-md-3 mb-sm-3">
                                         <div class="card" data-toggle="modal" data-target="#familia1">
-                                            <img class="d-block w-100 rounded"
-                                                src="imgs/ensaios/familia/familia-1.jpg" alt="Família Black">
+                                            <img class="d-block w-100 rounded" src="imgs/ensaios/familia/familia-1.jpg"
+                                                alt="Família Black">
                                             <div class="card-body">
                                                 <div class="card-title text-center">
                                                     <h5 class="titulo-destaque fw-bold mt-2">Família Black</h5>
@@ -348,8 +349,8 @@
 
                                     <div class="col-sm-12 col-md-6 col-lg-3 mb-md-3 mb-sm-3">
                                         <div class="card" data-toggle="modal" data-target="#familia2">
-                                            <img class="d-block w-100 rounded"
-                                                src="imgs/ensaios/familia/familia-2.jpg" alt="Família Cardoso">
+                                            <img class="d-block w-100 rounded" src="imgs/ensaios/familia/familia-2.jpg"
+                                                alt="Família Cardoso">
                                             <div class="card-body">
                                                 <div class="card-title text-center">
                                                     <h5 class="titulo-destaque fw-bold mt-2">Família Cardoso</h5>
@@ -360,8 +361,8 @@
 
                                     <div class="col-sm-12 col-md-6 col-lg-3 mb-md-3 mb-sm-3">
                                         <div class="card" data-toggle="modal" data-target="#familia3">
-                                            <img class="d-block w-100 rounded"
-                                                src="imgs/ensaios/familia/familia-3.jpg" alt="Família Castro">
+                                            <img class="d-block w-100 rounded" src="imgs/ensaios/familia/familia-3.jpg"
+                                                alt="Família Castro">
                                             <div class="card-body">
                                                 <div class="card-title text-center">
                                                     <h5 class="titulo-destaque fw-bold mt-2">Família Castro</h5>
@@ -372,8 +373,8 @@
 
                                     <div class="col-sm-12 col-md-6 col-lg-3 mb-md-3">
                                         <div class="card" data-toggle="modal" data-target="#familia4">
-                                            <img class="d-block w-100 rounded"
-                                                src="imgs/ensaios/familia/familia-4.jpg" alt="Família Alvez">
+                                            <img class="d-block w-100 rounded" src="imgs/ensaios/familia/familia-4.jpg"
+                                                alt="Família Alvez">
                                             <div class="card-body">
                                                 <div class="card-title text-center">
                                                     <h5 class="titulo-destaque fw-bold mt-2">Família Alvez</h5>
@@ -389,8 +390,8 @@
 
                                     <div class="col-sm-12 col-md-6 col-lg-3 mb-md-3 mb-sm-3">
                                         <div class="card" data-toggle="modal" data-target="#preto-e-branco-1">
-                                            <img class="d-block w-100 rounded"
-                                                src="imgs/ensaios/pb/pb-1.jpg" alt="P&B Natasha #1">
+                                            <img class="d-block w-100 rounded" src="imgs/ensaios/pb/pb-1.jpg"
+                                                alt="P&B Natasha #1">
                                             <div class="card-body">
                                                 <div class="card-title text-center">
                                                     <h5 class="titulo-destaque fw-bold mt-2">P&B Natasha #1</h5>
@@ -401,8 +402,8 @@
 
                                     <div class="col-sm-12 col-md-6 col-lg-3 mb-md-3 mb-sm-3">
                                         <div class="card" data-toggle="modal" data-target="#preto-e-branco-2">
-                                            <img class="d-block w-100 rounded"
-                                                src="imgs/ensaios/pb/pb-2.jpg" alt="P&B Natasha #2">
+                                            <img class="d-block w-100 rounded" src="imgs/ensaios/pb/pb-2.jpg"
+                                                alt="P&B Natasha #2">
                                             <div class="card-body">
                                                 <div class="card-title text-center">
                                                     <h5 class="titulo-destaque fw-bold mt-2">P&B Natasha #2</h5>
@@ -413,8 +414,8 @@
 
                                     <div class="col-sm-12 col-md-6 col-lg-3 mb-md-3 mb-sm-3">
                                         <div class="card" data-toggle="modal" data-target="#preto-e-branco-3">
-                                            <img class="d-block w-100 rounded"
-                                                src="imgs/ensaios/pb/pb-3.jpg" alt="P&B Natasha #3">
+                                            <img class="d-block w-100 rounded" src="imgs/ensaios/pb/pb-3.jpg"
+                                                alt="P&B Natasha #3">
                                             <div class="card-body">
                                                 <div class="card-title text-center">
                                                     <h5 class="titulo-destaque fw-bold mt-2">P&B Natasha #3</h5>
@@ -425,8 +426,8 @@
 
                                     <div class="col-sm-12 col-md-6 col-lg-3 mb-md-3">
                                         <div class="card" data-toggle="modal" data-target="#preto-e-branco-4">
-                                            <img class="d-block w-100 rounded"
-                                                src="imgs/ensaios/pb/pb-4.jpg" alt="P&B Jackson">
+                                            <img class="d-block w-100 rounded" src="imgs/ensaios/pb/pb-4.jpg"
+                                                alt="P&B Jackson">
                                             <div class="card-body">
                                                 <div class="card-title text-center">
                                                     <h5 class="titulo-destaque fw-bold mt-2">P&B Jackson</h5>
@@ -436,8 +437,8 @@
                                     </div>
                                     <div class="col-sm-12 col-md-6 col-lg-3 mb-md-3">
                                         <div class="card" data-toggle="modal" data-target="#preto-e-branco-5">
-                                            <img class="d-block w-100 rounded"
-                                                src="imgs/ensaios/pb/pb-5.jpg" alt="P&B Veneza">
+                                            <img class="d-block w-100 rounded" src="imgs/ensaios/pb/pb-5.jpg"
+                                                alt="P&B Veneza">
                                             <div class="card-body">
                                                 <div class="card-title text-center">
                                                     <h5 class="titulo-destaque fw-bold mt-2">P&B Veneza</h5>
@@ -450,26 +451,92 @@
 
                             <!-- Modal -->
                             <div class="modal fade col-8" id="" tabindex="-1" role="static"
-                            aria-labelledby="modal-label" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="modal-label"></h5>
-                                        <button type="button" class="btn-close"
-                                            data-bs-dismiss="modal"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <img id="imgModal" src="" class="d-block w-100 rounded">
+                                aria-labelledby="modal-label" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="modal-label"></h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img id="imgModal" src="" class="d-block w-100 rounded">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Seção - Entre em contato -->
+        <section id="entre-em-contato" class="pt-5 pb-5">
+            <div class="container">
+                <div class="row">
+                    <h2 class="titulo-destaque text-center">
+                        Entre <span class="titulo-destaque-colorido-dark">em contato</span>
+                    </h2>
+
+                    <div class="row mt-5">
+                        <div class="col-md-12 col-lg-6 mb-5">
+                            <form class="rounded d-flex flex-column">
+                                <div class="mb-3">
+                                    <label for="nome" class="form-label fw-bold text-colored">Nome</label>
+                                    <input type="text" id="nome" name="nome" class="form-control" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="nome" class="form-label fw-bold text-colored">Email</label>
+                                    <input type="email" id="email" name="email" class="form-control" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="nome" class="form-label fw-bold text-colored">Telefone</label>
+                                    <input type="tel" id="telefone" name="telefone" class="form-control" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="nome" class="form-label fw-bold text-colored">Mensagem</label>
+                                    <textarea id="mensagem" name="mensagem" class="form-control" required></textarea>
+                                </div>
+                                <button type="submit" class="btn fw-bold mt-2 mb-2">Enviar</button>
+                            </form>
+                        </div>
+                        <div class="col-md-12 col-lg-6 text-center">
+                            <div class="row">
+                                <h3 class="titulo-destaque fs-4 titulo-destaque-colorido-dark">
+                                    <i class="bi bi-chat-right-text-fill"></i>
+                                    Redes sociais
+                                </h3>
+                                <ul class="social-links">
+                                    <li class="fs-5">
+                                        <a href="#">
+                                            <i class="bi bi-facebook"></i>
+                                        </a>
+                                    </li>
+                                    <li class="fs-5 ms-1 me-1">
+                                        <a href="#">
+                                            <i class="bi bi-instagram"></i>
+                                        </a>
+                                    </li>
+                                    <li class="fs-5">
+                                        <a href="#">
+                                            <i class="bi bi-whatsapp"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="row mt-4">
+                                <h3 class="titulo-destaque fs-4 titulo-destaque-colorido-dark">
+                                    <i class="bi bi-cursor-fill"></i>
+                                    Endereço
+                                </h3>
+                                <p>
+                                    Rua das Mandiocas nº 95, Bairro do Xuxu - São Paulo - SP
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
